--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -30,6 +30,8 @@ html
       include subPages/about.pug
       //- include widgets/flight-scan-carousel.pug        
     include partials/footer.pug
+    .blurBack
+    include partials/breakingModal.pug 
     
     script(type='text/javascript', src='/scripts/nav.js')  
     script(type='text/javascript', src='/scripts/clickbait.js')
