--- a/public/views/subPages/about.pug
+++ b/public/views/subPages/about.pug
@@ -1,6 +1,3 @@
 div.tabcontent#about-page
-  .main-text.column
-    .title.mobile About 
-    h1 Your Flight Is Cancelled. 
-    p (No further information is available.)
-    p Your Flight Is Cancelled is a new e-flux project conceived by Julieta Aranda and Anton Vidokle. Part a bankrupt travel agency, part literally fiction, this itinerant installation and website speculate about a near future in which international movement of people, art and ideas grind to a halt. Beginning with a window display at NICC Brussels this fall, Your Flight Is Cancelled will appear in installments of short prose, images and video by a group of contributors including Brian Kuan Wood, Kaye Cain-Nielsen, Benjamin Bratton, Bruna Mori, Jörg Heiser, Chus Martínez, Ingo Niermann,  and others.
+    .tilt-title.center.tug YOUR FLIGHT <br/> IS CANCELLED <br/> (No further information <br/> is available)
+    p.main-text Your Flight Is Cancelled is a new e-flux project conceived by Julieta Aranda and Anton Vidokle. Part a bankrupt travel agency, part literally fiction, this itinerant installation and website speculate about a near future in which international movement of people, art and ideas grind to a halt. Beginning with a window display at NICC Brussels this fall, Your Flight Is Cancelled will appear in installments of short prose, images and video by a group of contributors including Brian Kuan Wood, Kaye Cain-Nielsen, Benjamin Bratton, Bruna Mori, Jörg Heiser, Chus Martínez, Ingo Niermann,  and others.
