--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -33,5 +33,5 @@ html
     .blurBack
     include partials/breakingModal.pug 
     
-    script(type='text/javascript', src='/scripts/nav.js')  
+    //- script(type='text/javascript', src='/scripts/nav.js')  
     script(type='text/javascript', src='/scripts/clickbait.js')
