--- a/public/views/partials/header.pug
+++ b/public/views/partials/header.pug
@@ -1,12 +1,8 @@
 header.logo-wrapper.desktop 
     a(href="/") 
-        img(src="./icons/GCATG-Blue Circles.svg")
-            //- h1.flat-link.logo
-                //- span Global Contemporary Art Tours Group, Inc.
+        img(src="./icons/GCATG-3-Light Blue.svg")
     .divider
 header.logo-wrapper.mobile 
     a(href="/") 
-        img(src="./icons/GCATG-Blue Circles.svg")
-    //- h1.flat-link.logo
-    //- Global Contemporary Art Tours Group, Inc.
+        img(src="./icons/GCATG-3-Light Blue.svg")
     .divider
