--- a/public/views/partials/nav.pug
+++ b/public/views/partials/nav.pug
@@ -21,4 +21,4 @@ nav.fade-in-fast
       div.tab-container
           a.tablink.menu-item#about-tab(href="#about" data-value="about") About Us
 span.navDot(onclick='toggleNav()')
-//- script(type='text/javascript', src='/scripts/nav.js')
+script(type='text/javascript', src='/scripts/nav.js')
