--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -82,15 +82,13 @@ body.modal-open #content-wrapper{
     opacity: 1;
 }
 
-
-
 a{
   color: inherit;
   text-decoration: none;
 }
 
 a:hover{
-  /* color: inherit; */
+  color: inherit;
 }
 .clickbait{
   background-position: center;
@@ -450,6 +448,9 @@ img.tba-image{
   position: absolute;
   box-shadow: -6px 6px 6px #ff00ffcc;
 }
+.preview-text .title{
+  margin-top: 1em;
+}
 
 .destination-tbas.tall{
   display: inline-block;
@@ -489,30 +490,31 @@ img#cancelled{
 .announcement{
   display: inline-block;
   position: absolute;
-  margin-left: 28%;
+  margin-left: 21%;
   margin-top: 10%;
 }
 
 .announcement div.frame.drop{
   top: 7px;
   left: -7px;
-  height: 338px;
+  height: 130px;
   position: absolute;
-  width: 240px;
+  width: 330px;
   box-shadow: inset 0 0 5px 6px #00f0ff47;
   border: solid 1px #535353;
   background-color: #ffffff;
 }
 
 .breaking-news{
-  width: 240px;
-  padding: 5em 20px 12px 20px;
+  padding: 3em 20px 1em 20px;
   box-shadow: inset 0 0 5px 6px #00f0ff47;
   border: solid 1px #535353;
   background-color: #ffffff;
   box-sizing: border-box;
 }
-
+.hide{
+  display: none;
+}
 
 #breaking{
    cursor: pointer;
