--- a/public/views/subPages/home.pug
+++ b/public/views/subPages/home.pug
@@ -2,9 +2,9 @@ div.tabcontent#home-page
   include ../widgets/flightSelection.pug
   .announcement
     .breaking-news#breaking
-      span.preview-tag Breaking News 
-      p Dear Art Lovers:
-      p We are saddened that after 25 years in business, Global Contemporary Art Tours Group, Inc., will shut down its operations in 2019. We deeply appreciate our loyal customers and are proud of having taken you to many wonderful and ground-breaking art exhibitions all around the globe: 
+      span.preview-tag Breaking <br/> News 
+      .title Dear Art Lovers...
+      a READ LETTER HERE
     div.frame.drop
   each article, key in dbEntries
     a.destination-item(href=`destinations/${key}`)
@@ -12,10 +12,10 @@ div.tabcontent#home-page
       - var previewUrls = DestPreviews.filter(img => img.indexOf(key) > -1); 
       img.prevew-image(src=previewUrls[0])
       .preview-text
-        h1 #{article.title}
-        p.author #{article.author}
-        - var snippetText = article.bodyText.substring(0, 140)
-        p #{snippetText}
+        .title #{article.title}
+        .author #{article.author}
+        - var snippetText = article.bodyText[0].substring(0, 80)
+        p #{snippetText} (+)
   - var tbaMedia = DestPreviews.filter(img => img.indexOf('TBA') > -1); 
   .destination-tbas.tall
     span.tba-tag NEW <br/> DESTINATION <br/> TBA
