--- a/public/views/partials/nav.pug
+++ b/public/views/partials/nav.pug
@@ -11,7 +11,7 @@ nav.fade-in-fast
       div.tab-container
         a.tablink.menu-item#offers-tab(href="#offers" data-value="offers") Deals & Offers
       div.tab-container
-        a.tablink.menu-item#service-tab(href="#service" data-value="service") Extra Services 
+        a.tablink.menu-item#services-tab(href="#services" data-value="services") Extra Services 
       div.tab-container
         a.tablink.menu-item#partners-tab(href="#partners" data-value="partners") Partners
       div.tab-container
