--- a/public/assets/styles/skeleton/skeleton.css
+++ b/public/assets/styles/skeleton/skeleton.css
@@ -78,7 +78,7 @@ input:focus, input:active {
   .eleven.columns                 { width: 91.3333333333%; }
   .twelve.columns                 { width: 100%; margin-left: 0; }
 
-  .one-third.column               { width: 30.6666666667%; }
+  .one-third.column               { width: 27.92% }
   .two-thirds.column              { width: 65.3333333333%; }
 
   .one-half.column                { width: 48%; }
