--- a/public/views/widgets/flightNoise.pug
+++ b/public/views/widgets/flightNoise.pug
@@ -1,6 +1,6 @@
 script(src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js")
 #waveform
-  #rainbow-wrapper
+  .rainbow-wrapper
     button#playAudio play
   
 script.
