--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -103,6 +103,7 @@ a:hover{
   background: #fff;
 }
 .round{
+  margin: 5em;
   width: 10em;
   height: 10em;
   border-radius: 5em;
@@ -114,7 +115,6 @@ a:hover{
 }
 .bar{
   height: 300px;
-  padding-top: 100px;
   background-color: transparent;
 }
 .bar div{
@@ -131,8 +131,10 @@ a:hover{
 }
 .box{
   color: #00F;
-  padding-left: 60px;
-  padding-top: 60px;
+}
+.lean-left{
+  position: relative;
+  left: -10em;
 }
 .box .pointer{
   width: 50px;
@@ -212,10 +214,7 @@ footer marquee{
 }
 
 #waveform{
-  width: 30%;
-  float: right;
-  margin: 36px;
-  margin-right: 10%;
+  margin: 3em 0;
 }
 
 #waveform canvas{
@@ -233,7 +232,9 @@ footer marquee{
 .filler-item{
   position: relative;
 }
-
+#smash-mirror{
+  margin: 5em 7.5em;
+}
 .roundFrame{
   width: 12em;
   height: 12em;
@@ -241,6 +242,15 @@ footer marquee{
   overflow: hidden;
   border: 20px #fff;
   box-shadow:  4px -3px 2px 3px #55ff00;
+}
+
+.roundFrame img{
+  height: 100%;
+  filter: grayscale(100%);
+}
+
+.roundFrame img:hover{
+  filter: grayscale(0%);
 }
 
 .filler-item#cables{
@@ -270,7 +280,7 @@ footer marquee{
 .cancellation-posters{
   position: relative;
   width: 200px;
-  margin-left: 30%;
+  height: 400px;
 }
 
 .cancellation-posters div.frame{
@@ -286,7 +296,9 @@ div.frame:nth-of-type(2){
 }
 
 #conference-carousel{
-  height: 80px
+  height: 80px;
+  position: absolute;
+  right: 10em;
 }
 
 #conference-carousel img{
@@ -308,14 +320,11 @@ div.frame:nth-of-type(2){
   height: 100%;
 }
 #train-video{
-  clear: both;
-  position: relative;
-  float: right;
   box-shadow: inset 1px 2px 6px 0 #00000080;
   border: solid 1px #979797;
   padding: 12px;
-  margin: 2em;
-  width: 30%;
+  width: 120%;
+  left: -2em;
 }
 #train-video video{
   width: 100%;
@@ -332,7 +341,7 @@ div.frame:nth-of-type(2){
   cursor: pointer;
 }
 
-#rainbow-wrapper{
+.rainbow-wrapper{
   width: 100px;
   box-shadow: inset 1px 2px 6px 0 #8bfd00;
   border-style: solid;
@@ -343,6 +352,14 @@ div.frame:nth-of-type(2){
   margin: 0 auto;
 }
 
+#bookNOW{
+  box-shadow: 3px 4px 5px 0 #94949480;
+  background-image: linear-gradient(to right, #b6fcb6, #01ff01 56%, #016bff);
+}
+.padded{
+  margin: 7em auto 1em auto;
+  text-align: center;
+}
 #playAudio{
   width: 100%;
   height: 34px;
@@ -390,30 +407,18 @@ span.preview-tag{
 a:hover h1{
   color: initial;
 }
+.destination-item{
+  margin-left: 4em;
+}
 
 .destination-item,
 .destination-tbas{
-  width: 20%;
+  width: 80%;
   min-width: 300px;
   position: relative;
-  margin-top: 2em;
+  margin-top: 4em;
   height: 350px;
   z-index: 1;
-}
-
-@media screen and (min-width: 1400px) {
-  .destination-item:first-of-type {
-    right: 20%;
-  }
-
-  .tilt-title{
-    left: 20%;
-    top: 21%;
-  }
-}
-
-.destination-item:first-of-type{
-  float: right;
 }
 
 img.prevew-image,
@@ -464,10 +469,7 @@ img.tba-image{
   top: 3em;
   left: .8em;
 }
-.destination-tbas.wide{
-  margin: 0 auto;
-  top: 20em;
-}
+
 .destination-tbas.wide .tba-holder{
   height: 40px;
   margin-left: -1em;
@@ -488,10 +490,8 @@ img#cancelled{
 }
 
 .announcement{
-  display: inline-block;
-  position: absolute;
-  margin-left: 21%;
   margin-top: 10%;
+  position: relative;
 }
 
 .announcement div.frame.drop{
@@ -518,6 +518,7 @@ img#cancelled{
 
 #breaking{
    cursor: pointer;
+   position: relative;
 }
 .tug{
   z-index: -1;
@@ -557,4 +558,10 @@ body.error404 nav{
 }
 body.error404 header{
   opacity: 0;
+}
+
+.left-over{
+  width: calc(100% - 200px);
+  left: 200px;
+  position: relative;
 }
