--- a/public/views/subPages/home.pug
+++ b/public/views/subPages/home.pug
@@ -1,55 +1,77 @@
-div.tabcontent#home-page
+div.tabcontent#home-page.row
   include ../widgets/flightSelection.pug
-  .announcement
-    .breaking-news#breaking
-      span.preview-tag Breaking <br/> News 
-      .title Dear Art Lovers...
-      a READ LETTER HERE
-    div.frame.drop
-  each article, key in dbEntries
-    a.destination-item(href=`destinations/${key}`)
-      span.preview-tag #{article.place}
-      - var previewUrls = DestPreviews.filter(img => img.indexOf(key) > -1); 
-      img.prevew-image(src=previewUrls[0])
-      .preview-text
-        .title #{article.title}
-        .author #{article.author}
-        - var snippetText = article.bodyText[0].substring(0, 80)
-        p #{snippetText} (+)
-  - var tbaMedia = DestPreviews.filter(img => img.indexOf('TBA') > -1); 
-  .destination-tbas.tall
-    span.tba-tag NEW <br/> DESTINATION <br/> TBA
-    .tba-image-wrapper
-      img.tba-image(src=tbaMedia[0])
-    .tba-holder
-  .cancellation-posters
-    - var cancellations = GCATGImages.filter(img => img.indexOf('CANCEL_FLIGHTS') > -1);     
-    img#cancelled(src=cancellations[0])
-    - var n = 0;
-    while n < 4
-      div.frame.drop= n++
-  .filler-content
-    //- .filler-item#cables 
-    //-   - var cables = GCATGImages.filter(img => img.indexOf('runway') > -1); 
-    //-   img#cable-cover.drop(src=cables[0])
-    //-   div.frame.drop 
-    //-   div.frame.drop 
-    .stamps
-      div.ovalFlat
-        img.accent-md(src="./images/stamps/lightingstrike.gif")
-    .filler-item#train-video
-      - var trainVid = GCATGVideos.filter(vid => vid.indexOf('trains') > -1);
-      video
-        source(src=trainVid[0])
-      button#retroPlay
+  -var tbaMedia = DestPreviews.filter(img => img.indexOf('TBA') > -1); 
+  .one-third.column
+    marquee.clickbait.bar(direction="down" behavior="alternate")
+      div Click Here for New Offer
+      img.stargalaxy(src="./images/stamps/stargalaxy.gif")
+        
+    .stamps.center
+      img.safetyCard(src="./images/stamps/EMERGENCY-1-small.jpg")
+        
+    .destination-tbas.tall
+      span.tba-tag NEW <br/> DESTINATION <br/> TBA
+      .tba-image-wrapper
+        img.tba-image(src=tbaMedia[0])
+      .tba-holder
+  
+    marquee.clickbait.round(direction="down" behavior="alternate")
+      img(src="./images/stamps/image-non.jpg")
+    .stamps.stacked
+      .ovalTall
+        .tallInside
+      div.fragile
+        img.accent-md(src="./images/stamps/fragile.png")
+        span.safe STAY SAFE: DON’T GO ANYWHERE!
+    marquee.clickbait.box.lean-left(direction="left" behavior="alternate")
+      div VENICE BIENNALE TICKETS <br/> YOKOHAMA TRIENNALE PASSES <br/> SAO PAOLO FLIGHTS
     .filler-item#flight-noise
       include ../widgets/flightNoise.pug
+      
+      
+  .one-third.column
+    .announcement
+      .breaking-news#breaking
+        span.preview-tag Breaking <br/> News 
+        .title Dear Art Lovers...
+        a READ LETTER HERE
+      div.frame.drop
+    
+    .stamps.flag
+      //- REPLACE AMERICAN FLAG  
+      img.accent-md(src="./images/stamps/American-Flag.gif") 
+      
+    marquee.clickbait.box(direction="left" behavior="alternate")
+      div BIENNALES- SAVE UP TO 10% <br/> TRIENNALES SAVE UP TO 15% <br/> FESTIVALS DISCOUNTS 5%
+      img#red-arrow.accent-md(src="./images/stamps/3dred.png")
+    
+    div.oval#sleeper1
+      img(src="./images/stock/sleeper1.jpg")
+    
+    .cancellation-posters
+      - var cancellations = GCATGImages.filter(img => img.indexOf('CANCEL_FLIGHTS') > -1);     
+      img#cancelled(src=cancellations[0])
+      - var n = 0;
+      while n < 4
+        div.frame.drop= n++
+    
+    .stamps.center
+      div.ovalFlat
+        img.accent-md(src="./images/stamps/lightingstrike.gif")
+        
+    .destination-tbas.wide
+      span.tba-tag NEW <br/> DESTINATION <br/> TBA
+      .tba-image-wrapper
+        img.tba-image(src=tbaMedia[1])
+      .tba-holder
+
     .filler-item#conference-carousel
       marquee
         img(src="./images/stock/conference/conference1.jpg")
         img(src="./images/stock/conference/conference2.jpg")
         img(src="./images/stock/conference/conference3.jpg")
         img(src="./images/stock/conference/conference4.jpg")
+
       .stars-banner
         img(src="./images/stamps/shiny star.gif")
         img(src="./images/stamps/shiny star.gif")
@@ -57,33 +79,49 @@ div.tabcontent#home-page
         img(src="./images/stamps/shiny star.gif")
         img(src="./images/stamps/shiny star.gif")
 
-    .filler-item#air-scanner
+    marquee.clickbait.bar(direction="up" behavior="alternate")
+      div Click Here for New Offer
+      img#yellow-arrow.accent-md(src="./images/stamps/3dyellow.png")
+        
+  .one-third.column
+    .stamps
+      .flashPlugin 
+        object(type="application/x-shockwave-flash" data="flash-file.swf" width="300" height="125")
+          param(name="movie" value="flash-file.swf")
+          param(name="quality" value="high")
+        img.accent.south-west(src="./images/Symbols/Airtickets.png")
+    .stamps      
+      img.accent-md(src="./images/Symbols/place_selection.png")
+
+    each article, key in dbEntries
+      .destination-item
+        span.preview-tag #{article.place}
+        - var previewUrls = DestPreviews.filter(img => img.indexOf(key) > -1); 
+        img.prevew-image(src=previewUrls[0])
+        a.preview-text(href=`destinations/${key}`)
+          .title #{article.title}
+          .author #{article.author}
+          - var snippetText = article.bodyText[0].substring(0, 80)
+          p #{snippetText} (+)
+    div.padded
+      button.subscribe.rainbow-wrapper subscribe
+    
+    .filler-item#train-video
+      - var trainVid = GCATGVideos.filter(vid => vid.indexOf('trains') > -1);
+      video
+        source(src=trainVid[0])
+      button#retroPlay
+      
+    .filler-item#smash-mirror
       div.roundFrame
-        img(src="/images/fillers/clearairturbulence.jpg")
-    .destination-tbas.wide
-      span.tba-tag NEW <br/> DESTINATION <br/> TBA
-      .tba-image-wrapper
-        img.tba-image(src=tbaMedia[1])
-      .tba-holder
-  .stamps
-    .flashPlugin
-      object(type="application/x-shockwave-flash" data="flash-file.swf" width="300" height="125")
-        param(name="movie" value="flash-file.swf")
-        param(name="quality" value="high")
-      img.accent.south-west(src="./images/Symbols/Airtickets.png")
-    img.safetyCard(src="./images/stamps/EMERGENCY-1-small.jpg")
-    div.oval#sleeper1
-      img(src="./images/stock/sleeper1.jpg")
-    .ovalTall
-      .tallInside
+        img(src="./images/stock/b01_19269669.jpg")
+    div.padded
+      button#bookNOW BOOK NOW 
+    
     div.oval#sleeper2
       img(src="./images/stock/sleeper2.jpg")
-    div.fragile
-      img.accent-md(src="./images/stamps/fragile.png")
-      span.safe STAY SAFE: DON’T GO ANYWHERE!
+        
+    script(type='text/javascript', src='/scripts/home.js')
 
-  script.
-    var ssGCATGImages = !{JSON.stringify(GCATGImages)} 
-  script(type='text/javascript', src='/scripts/home.js')
 
-  
+    
