--- a/public/assets/styles/project.css
+++ b/public/assets/styles/project.css
@@ -13,8 +13,8 @@
   box-sizing: border-box;
   margin: 0 auto;
   margin-top: 1em;
-  padding: 24px 10%;
-  height: 68vh;
+  padding: 60px;
+  height: 72vh;
   overflow: scroll;
   background: #fff;
   box-shadow: 0 2px 4px 0 #00000080;
