--- a/public/views/subPages/home.pug
+++ b/public/views/subPages/home.pug
@@ -120,7 +120,8 @@ div.tabcontent#home-page.row
     
     div.oval#sleeper2
       img(src="./images/stock/sleeper2.jpg")
-        
+    script.
+      var ssGCATGImages = !{JSON.stringify(GCATGImages)} 
     script(type='text/javascript', src='/scripts/home.js')
 
 
