--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -21,7 +21,7 @@ html
     section#content-wrapper
       #content
       include subPages/home.pug
-      include subPages/destinations.pug
+      //- include subPages/destinations.pug
       include subPages/vacations.pug
       include subPages/offers.pug
       - var cloudVid = GCATGVideos.filter(vid => vid.indexOf('clouds') > -1);
