more styling since 10pm

--- a/public/assets/styles/main.css
+++ b/public/assets/styles/main.css
@@ -174,7 +174,7 @@ footer{
   bottom: 0;
   color: #e10000;
   height: 60px;
-  background-image: linear-gradient(to top, #01ff01, rgba(255, 255, 255, 0.85));
+  background-image: linear-gradient(to top, #01ff01, rgba(255, 255, 255, 0.05));
   width: 100%;
 }
 
@@ -215,6 +215,7 @@ footer marquee{
 
 #waveform{
   margin: 3em 0;
+  width: 100%;
 }
 
 #waveform canvas{
