--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -22,11 +22,11 @@ html
       #content
       include subPages/home.pug
       //- include subPages/destinations.pug
-      include subPages/vacations.pug
-      include subPages/offers.pug
+      //- include subPages/vacations.pug
+      //- include subPages/offers.pug
       - var cloudVid = GCATGVideos.filter(vid => vid.indexOf('clouds') > -1);
-      include subPages/services.pug
-      include subPages/privacy.pug
+      //- include subPages/services.pug
+      //- include subPages/privacy.pug
       include subPages/about.pug
       //- include widgets/flight-scan-carousel.pug        
     include partials/footer.pug
