--- a/public/views/subPages/home.pug
+++ b/public/views/subPages/home.pug
@@ -57,7 +57,7 @@ div.tabcontent#home-page.row
     
     .stamps.center
       div.ovalFlat
-        img.accent-md(src="./images/stamps/lightingstrike.gif")
+        img.accent-md(src="./images/stamps/Aerodynamic-Airplane.gif")
         
     .destination-tbas.wide
       span.tba-tag NEW <br/> DESTINATION <br/> TBA
@@ -91,7 +91,7 @@ div.tabcontent#home-page.row
           param(name="quality" value="high")
         img.accent.south-west(src="./images/Symbols/Airtickets.png")
     .stamps      
-      img.accent-md(src="./images/Symbols/place_selection.png")
+      img.place.accent-md(src="./images/Symbols/place_selection.png")
 
     each article, key in dbEntries
       .destination-item
