--- a/public/assets/styles/stamp.css
+++ b/public/assets/styles/stamp.css
@@ -61,7 +61,7 @@ div.ovalFlat img{
   border-radius: 50%;
   width: 341px;
    height: 227px;
-   overflow: hidden;
+   /* overflow: hidden; */
    background-blend-mode: lighten;
    /* filter: blur(3px); */
    box-shadow: inset 0px 0px 40px 40px #fff;
@@ -70,9 +70,10 @@ div.ovalFlat img{
 .tallInside{
   width: 100%;
   height: 100%;
-  box-shadow: inset 0px 0px 40px 40px #fff;
+  /* box-shadow: inset 0px 0px 40px 40px #fff; */
+  box-shadow: inset 0 0 32px 25px #fff;
   background-image: url("../images/stamps/venice fall 2.jpg");
-  background-size: contain;
+  background-size: cover;
 }
 
 .ovalTall img{
@@ -139,4 +140,10 @@ span.safe{
   position: absolute;
   left: 0;
   top: -3em;
+}
+
+.place{
+  margin: 3em;
+  margin-left: 13em;
+  width: 2.625em
 }
