remove dre's itches

--- a/public/assets/styles/typography.css
+++ b/public/assets/styles/typography.css
@@ -133,6 +133,8 @@ p{
     font-size: 15px;
     line-height: 20px;
 }
+
+.address, 
 p.block{
   font-family: 'AcuminPro-Regular';
   font-size: 12px;
