--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -25,7 +25,7 @@ html
       //- include subPages/vacations.pug
       //- include subPages/offers.pug
       - var cloudVid = GCATGVideos.filter(vid => vid.indexOf('clouds') > -1);
-      //- include subPages/services.pug
+      include subPages/services.pug
       //- include subPages/privacy.pug
       include subPages/about.pug
       //- include widgets/flight-scan-carousel.pug        
