--- a/public/views/partials/breakingModal.pug
+++ b/public/views/partials/breakingModal.pug
@@ -18,6 +18,6 @@
       
       p Kevin O. Dalton
       
-      p Vice President of Communications <br/> The Global Contemporary Art Tours Group, LTD <br/> Rue Lambert Crickx Straat, 1 1070 Brussels
+      .address Vice President of Communications <br/> The Global Contemporary Art Tours Group, LTD <br/> Rue Lambert Crickx Straat, 1 1070 Brussels
 
   script(type='text/javascript', src='/scripts/modal.js')
