--- a/public/assets/styles/nav.css
+++ b/public/assets/styles/nav.css
@@ -60,8 +60,7 @@ nav {
   box-sizing: border-box;
   width: calc(100% - 200px);
   text-align: right;
-  font-size: 14px;
-  background-image: linear-gradient(to bottom, #ffffff00, #ffffff 53%, #ffffff00);
+  /* background-image: linear-gradient(to bottom, #ffffff00, #ffffff 53%, #ffffff00); */
 }
 
 nav.sticky {
