--- a/public/assets/styles/modal.css
+++ b/public/assets/styles/modal.css
@@ -50,7 +50,6 @@
     margin: 11% auto;
     width: 80%;
     max-width: 650px;
-    height: 65%;
     position: relative;
     padding: 25px;
 }
@@ -78,4 +77,25 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+
+@media (min-width: 768px) {
+
+  .modal-content {
+    height: 65%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 767px){
+  .modal-content {
+    height: 72vh;
+    margin-top: 15vh;
+  }
+  .modal span.preview-tag{
+    top: 7%;
+    left: 4%;
+    z-index: 2;
+  }
+
 }
