--- a/public/assets/styles/nav.css
+++ b/public/assets/styles/nav.css
@@ -51,34 +51,24 @@ span.menu-item{
 }
 nav {
   box-sizing: border-box;
-  text-align: right;
-  font-size: 14px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.1s ease;
-  padding: 0px 30px 8px 30px;
-  margin-left: 200px;
   box-sizing: border-box;
-  width: calc(100% - 200px);
-  text-align: right;
+
   /* background-image: linear-gradient(to bottom, #ffffff00, #ffffff 53%, #ffffff00); */
 }
 
-nav.sticky {
-  top: 0;
-  position: fixed;
-   font-size: 24px;
-   line-height: 40px;
-   height: 40px;
-   color: #000;
-   text-align: left;
-   background: white;
-   z-index: 1000;
-   padding: 15px 60px 0 60px;
-    margin: 0;
-    width: 100%;
-    /* box-shadow: 0px 1px 60px white; */
+nav.desktop{
+  width: calc(100% - 200px);
+  margin-left: 200px;
+  text-align: right;
+  padding: 0px 30px 8px 30px;
 }
 
+nav.mobile{
+  width: 100%;
+  text-align: center;
+}
 nav a{
   text-decoration: none;
   color: inherit;
@@ -98,58 +88,8 @@ nav a:hover{
   .logo-wrapper{
     margin: 15px 0 0 30px;
   }
-  span.navDot{
-    bottom: 20px;
-    right: 24px;
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
-    box-shadow: 1px 1px 8px #000;
-    padding: 0;
-    z-index: 10;
-    background: #fff;
-    position: fixed;
-  }
-  .pop{
-      background: #0f0 !important;
-  }
-  .open-popup{
-     right: 0;
-  }
-
-  nav{
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right: -100vw;
-    background-color: rgba(0,0,0, 0.65);
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding: 0;
-    margin: 0;
-    padding-top: 70vh;
-    padding-left: 50%;
-    color: #fff;
-  }
-  .tab-container{
-    z-index: 100;
-    display: block;
-    width: fit-content;
-  }
 }
 
-@media (min-width: 768px){
-  span#navDot, .nav-background{
-    display: none;
-  }
-
-  a#contact{
-    cursor: pointer;
-    float: right;
-  }
-}
 
 @media (min-width: 768px) and (max-width: 1024px) {
 }
