--- a/public/views/partials/nav.pug
+++ b/public/views/partials/nav.pug
@@ -1,24 +1,29 @@
 link(href='/styles/nav.css', rel='stylesheet')
   
-nav.fade-in-fast 
+nav.desktop
+  div.tab-container
+    a.tablink.menu-item#defaultOpen(href="#home" data-value="home") HOME
+  .tab-group
     div.tab-container
-      a.tablink.menu-item#defaultOpen(href="#home" data-value="home") HOME
-    .tab-group
-      div.tab-container
-        a.tablink.menu-item#destinations-tab(href="#destinations" data-value="destinations") Destinations
-      div.tab-container
-        a.tablink.menu-item#vacations-tab(href="#vacations" data-value="vacations") Vacation Packages  
-      div.tab-container
-        a.tablink.menu-item#offers-tab(href="#offers" data-value="offers") Deals & Offers
-      div.tab-container
-        a.tablink.menu-item#services-tab(href="#services" data-value="services") Extra Services 
-      div.tab-container
-        a.tablink.menu-item#partners-tab(href="#partners" data-value="partners") Partners
-      div.tab-container
-        a.tablink.menu-item#privacy-tab(href="#privacy" data-value="privacy") Terms of Privacy
-      div.tab-container
-        a.tablink.menu-item#faq-tab(href="#faq" data-value="faq") Passport FAQ
-      div.tab-container
-          a.tablink.menu-item#about-tab(href="#about" data-value="about") About Us
-span.navDot(onclick='toggleNav()')
+      a.tablink.menu-item#destinations-tab(href="#destinations" data-value="destinations") Destinations
+    div.tab-container
+      a.tablink.menu-item#vacations-tab(href="#vacations" data-value="vacations") Vacation Packages  
+    div.tab-container
+      a.tablink.menu-item#offers-tab(href="#offers" data-value="offers") Deals & Offers
+    div.tab-container
+      a.tablink.menu-item#services-tab(href="#services" data-value="services") Extra Services 
+    div.tab-container
+      a.tablink.menu-item#partners-tab(href="#partners" data-value="partners") Partners
+    div.tab-container
+      a.tablink.menu-item#privacy-tab(href="#privacy" data-value="privacy") Terms of Privacy
+    div.tab-container
+      a.tablink.menu-item#faq-tab(href="#faq" data-value="faq") Passport FAQ
+    div.tab-container
+        a.tablink.menu-item#about-tab(href="#about" data-value="about") About Us
+nav.mobile
+  div.tab-container
+    a.tablink.menu-item#defaultOpen(href="#home" data-value="home") HOME
+  div.tab-container
+    a.tablink.menu-item#about-tab(href="#about" data-value="about") About Us
+    
 script(type='text/javascript', src='/scripts/nav.js')
