--- a/public/views/widgets/flightSelection.pug
+++ b/public/views/widgets/flightSelection.pug
@@ -4,7 +4,7 @@ script(src="/scripts/lib/jquery-timepicker-1.3.5/jquery.timepicker.min.js")
 link(rel='stylesheet', href="/scripts/lib/jquery-timepicker-1.3.5/jquery.timepicker.min.css")
 link(rel='stylesheet', href='./styles/widgets.css')
 
-form#booking(action="/action_page.php" autocomplete="off")
+form#booking.desktop(action="/action_page.php" autocomplete="off")
   fieldset
     label(for="project")  Select Destinations
     select.full(id="project" name="project")
