breaking news text update

--- a/public/views/partials/breakingModal.pug
+++ b/public/views/partials/breakingModal.pug
@@ -10,8 +10,9 @@
       
       img.banner(src="/images/stock/copyright_laurian_ghinitoiu_canada_(6_of_10).jpg")
         
-      p Unfortunately, all international exhibitions – following the dissolution of the European Union; the unilateral suspension of visa and banking agreements by the United States; the deforestation of the Amazon; the defunding of the United Nations; the withdrawal from the Internet by the Russian Federation; the absorption of the South into the North Korea; and the deployment of total surveillance systems by the People's Republic of China – have now been cancelled. Any travel reservations you may have made with us after our closing date is now effectively void. Please note: All paid deposits or fees for airfare and hotel or show admissions are non-refundable. We apologize for any inconvenience this may cause.
+      p Unfortunately, all international exhibitions – following the dissolution of the European Union; the unilateral suspension of visa and banking agreements by the United States; the instituting of military dictatorships throughout Latin America; the defunding of the United Nations; the withdrawal from the Internet by the Russian Federation; the absorption of the South into the North Korea; and the deployment of total surveillance systems by the People’s Republic of China – have now been cancelled. Any travel reservations you may have made with us after our closing date is now effectively void.
       
+      p Please note: All paid deposits or fees for airfare and hotel or show admissions are non-refundable. We apologize for any inconvenience this may cause.
       p Due to the nature of this closure, we will be in limited operations in the coming months. We will not be able to help you make alternative arrangements for travel to your final destination after the cancellation of our last flight.
             
       p Sincerely,
