--- a/public/views/partials/breakingModal.pug
+++ b/public/views/partials/breakingModal.pug
@@ -6,13 +6,16 @@
     .modal-text 
       p Dear Art Lovers: <br/> <br/> 
       
-      p We are saddened to inform you that after 25 years in business, Global Contemporary Art Tours Group, LTD will shut down its operations in 2019. We deeply appreciate our loyal customers and are proud to have taken you to many wonderful and ground-breaking art exhibitions all around the globe: from traveling to the Yokohama Triennale to the Skulptur Projekte Münster; taking our customers to the last 12 editions of the Venice Biennale; visiting Dakar, Sao Paulo, and Dhaka together; and so on… We are proud to have organized the logistics for our loyal customers and to have provided you with the most comfortable travel arrangements for any and every destination where an art event has taken place, no matter how remote. Throughout the past 25 years, we have traveled to more than one thousand destinations worldwide.
+      p We are saddened to inform you that after 25 years in business, Global Contemporary Art Tours Group, LTD will shut down its operations in 2019. We deeply appreciate our loyal customers and are proud to have taken you to many wonderful and ground-breaking art exhibitions all around the globe, no matter how remote the event: from traveling to the <i> Yokohama Triennale </i> to the <i> Skulptur Projekte Münster</i>; taking our customers to the last 12 editions of the Venice Biennale; visiting Dakar, Sao Paulo, Dhaka, together; and so on… 
       
       img.banner(src="/images/stock/copyright_laurian_ghinitoiu_canada_(6_of_10).jpg")
         
-      p Unfortunately, all international exhibitions – following the dissolution of the European Union; the unilateral suspension of visa and banking agreements by the United States; the instituting of military dictatorships throughout Latin America; the defunding of the United Nations; the withdrawal from the Internet by the Russian Federation; the absorption of the South into the North Korea; and the deployment of total surveillance systems by the People’s Republic of China – have now been cancelled. Any travel reservations you may have made with us after our closing date is now effectively void.
-      
+      p Unfortunately, all international exhibitions – following the dissolution of the European Union; the unilateral suspension of visa and banking agreements by the United States; the institution of military dictatorships throughout Latin America; the defunding of the United Nations; the withdrawal from the Internet by the Russian Federation; the absorption of the South into the North Korea; and the deployment of total surveillance systems by the People’s Republic of China – have now been cancelled. Any travel reservations you may have made with us after our closing date is now effectively void.
+      img.half(src="https://s3.eu-central-1.amazonaws.com/globalarttours/newsletter/art-festival-farce/P1200758.jpg")
+      img.half(src="https://s3.eu-central-1.amazonaws.com/globalarttours/newsletter/art-festival-farce/large_031517_BiennialArtWorld--1867.jpg")
+
       p Please note: All paid deposits or fees for airfare and hotel or show admissions are non-refundable. We apologize for any inconvenience this may cause.
+      img.banner(src="https://s3.eu-central-1.amazonaws.com/globalarttours/newsletter/ANNOUNCEMENT+IMAGE+2.jpg")
       p Due to the nature of this closure, we will be in limited operations in the coming months. We will not be able to help you make alternative arrangements for travel to your final destination after the cancellation of our last flight.
             
       p Sincerely,
